Migrated working setup to master branch

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,27 +3,23 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#
-default: &default
-  adapter: mysql
-  pool: 5
-  timeout: 5000
-
 development:
-  <<: *default
   adapter: sqlite3
   database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
   adapter: sqlite3
   database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
 
 production:
-  <<: *default
-  database: rails_kep_prod
-  username: kepler
-  password: k1e2p3l4e5r6
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
