--- a/config/database.yml
+++ b/config/database.yml
@@ -29,13 +29,13 @@ production:
   database: kep_production
   pool: 5
   timeout: 5000
-  username: ENV["DB_USER"]
-  password: ENV["DB_PASS"]
+  username: <%= ENV["DB_USER"] %>
+  password: <%= ENV["DB_PASS"] %>
 
 staging:
   adapter: postgresql
   database: kep_staging
   pool: 5
   timeout: 5000
-  username: ENV["DB_USER"]
-  password: ENV["DB_PASS"]
+  username: <%= ENV["DB_USER"] %>
+  password: <%= ENV["DB_PASS"] %>
