--- a/config/database.yml
+++ b/config/database.yml
@@ -26,16 +26,18 @@ test:
   
 production:
   adapter: postgresql
+  host: localhost
   database: kep_production
   pool: 5
   timeout: 5000
-  username: <%= ENV["DB_USER"] %>
-  password: <%= ENV["DB_PASS"] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASS'] %>
 
 staging:
   adapter: postgresql
+  host: localhost
   database: kep_staging
   pool: 5
   timeout: 5000
-  username: <%= ENV["DB_USER"] %>
-  password: <%= ENV["DB_PASS"] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASS'] %>
