--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,8 @@
 # Ignore application configuration
 /config/application.yml
 
+#Ignore secrets file
+/config/secrets.yml
+
 #Ignore redis database
 dump.rdb
